--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@jsonhero/schema-infer": "^0.1.5",
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +12,8 @@
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "d3": "^7.8.5",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
+    "@types/lodash": "^4.14.197",
     "tailwindcss": "^3.3.3"
   }
 }
