--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.7",
     "d3": "^7.8.5",
     "lodash": "^4.17.21",
+    "mixpanel-browser": "^2.47.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "@types/lodash": "^4.14.197",
+    "@types/mixpanel-browser": "^2.47.1",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
