--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "d3": "^7.8.5",
     "heroicons": "^2.0.18",
     "lodash": "^4.17.21",
-    "mixpanel-browser": "^2.47.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false & react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
