--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react-dom": "^18.2.7",
     "d3": "^7.8.5",
     "heroicons": "^2.0.18",
+    "i": "^0.3.7",
     "lodash": "^4.17.21",
+    "npm": "^9.8.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
