fix branch name

--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -46,7 +46,7 @@ name: Build and Deploy to Cloud Run
 
 on:
   push:
-    branches: [ "KengoA/master" ]
+    branches: [ "master" ]
 
 env:
   PROJECT_ID: visprex
