--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/web": "^9.7.3",
     "@types/papaparse": "^5.3.14",
     "d3": "^7.8.5",
+    "dayjs": "^1.11.13",
     "heroicons": "^2.1.1",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
