--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "test": "vitest",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -13,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "@react-spring/web": "^9.7.3",
     "@types/papaparse": "^5.3.14",
+    "@vitejs/plugin-react": "^4.3.4",
     "d3": "^7.8.5",
     "dayjs": "^1.11.13",
     "heroicons": "^2.1.1",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -36,6 +39,7 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
-    "vite": "^6.2.1"
+    "vite": "^6.2.1",
+    "vitest": "^3.0.8"
   }
 }
