--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Run Tests & Linting
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    name: Run Vitest
+    name: Run Vitest & Lint
     runs-on: ubuntu-latest
 
     steps:
@@ -22,6 +22,9 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
+
+      - name: Run ESLint
+        run: npm run lint
 
       - name: Run Vitest
         run: npm run test
