--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "d3": "^7.8.5",
     "dayjs": "^1.11.13",
     "heroicons": "^2.1.1",
-    "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -24,7 +23,6 @@
   "devDependencies": {
     "@types/d3": "^7.4.3",
     "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.14.202",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -39,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "postcss": "^8.4.32",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^6.2.1",
